# dict-counter

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dict_counter/: __init__.py
tests/: test_dict_counter.py
