[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dict-counter"
version = "0.1.2"
description = "A lightweight library for counting keys in dictionaries."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Paul Durivage", email = "pauldurivage@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["dict", "counter", "collections"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/angstwad/dict-counter"
Repository = "https://github.com/angstwad/dict-counter"
Issues = "https://github.com/angstwad/dict-counter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dict_counter"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "twine>=6.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true